# mellea-contribs

./: .env_template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  EMBEDDING_COMPARISON_REPORT.md  KG_MIGRATION_CHECKLIST.md  KG_MIGRATION_COMPLETED.md  KG_MIGRATION_DIFF_SUMMARY.txt  KG_MIGRATION_PLAN.md  KG_PIPELINE_ARCHITECTURE.md  KG_UPDATE_IMPROVEMENT_SUMMARY.md  PHASE3_EXPECTATIONS_VS_REALITY.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE3_QUICK_START.md  PHASE3_STRATEGIC_SUMMARY.md  PHASE4_CONFIGURATION.md  PIPELINE_SETUP_SUMMARY.md  PREPROCESSING_REWRITE_SUMMARY.md  README.md  missing_for_run_sh.txt  pyproject.toml  sun.sh
.github/: mergify.yml
.github/actions/free-disk-space/: action.yml
.github/scripts/: release.sh
.github/workflows/: cd.yml  ci.yml  pypi.yml  quality.yml
docs/: double_round_robin.mdx  grounding_context_formatter.mdx  kg_overview.md  top_k.mdx
docs/examples/kgrag/: .env_template  README.md
docs/examples/kgrag/data/: demo.jsonl  documents.jsonl  tiny.jsonl
docs/examples/kgrag/dataset/: README.md
docs/examples/kgrag/models/: __init__.py  movie_domain_models.py
docs/examples/kgrag/output/: eval_metrics.json  eval_results.json  update_results.jsonl
docs/examples/kgrag/preprocessor/: __init__.py  movie_preprocessor.py
docs/examples/kgrag/rep/: __init__.py  movie_rep.py
docs/examples/kgrag/scripts/: TINY_DATASET  __init__.py  create_demo_dataset.py  create_tiny_dataset.py  create_truncated_dataset.py  run.sh  run_eval.py  run_kg_embed.py  run_kg_preprocess.py  run_kg_update.py  run_qa.py
docs/examples/kgrag/scripts/results/: update_kg_progress.json
mellea_contribs/kg/: README.md  __init__.py  base.py  embed_models.py  embedder.py  kgrag.py  models.py  preprocessor.py  qa_models.py  rep.py  requirements_models.py  updater_models.py
mellea_contribs/kg/components/: __init__.py  generative.py  llm_guided.py  query.py  result.py  traversal.py
mellea_contribs/kg/graph_dbs/: __init__.py  base.py  mock.py  neo4j.py
mellea_contribs/kg/requirements/: __init__.py
mellea_contribs/kg/sampling/: __init__.py  validation.py
mellea_contribs/kg/utils/: __init__.py  data_utils.py  eval_utils.py  progress.py  session_manager.py
mellea_contribs/reqlib/: __init__.py  check_AL_statutes.py  citation_exists.py  common_aliases.py  double_round_robin.py  dynamic_context_builder.py  grounding_context_formatter.py  import_repair.py  import_resolution.py  is_appellate_case.py  statute_data.py  top_k.py
mellea_contribs/reqlib/agentic-lib-docs/: double_round_robin.mdx  dynamic_context_builder.mdx
mellea_contribs/test/: test_AL_statues.py
mellea_contribs/tools/: double_round_robin.py  top_k.py
test/: citation_exists_database.json  conftest.py  small_citation_exists_database.json  test_AL_statues.py  test_citation_exists.py  test_double_round_robin.py  test_grounding_context_formatter.py  test_import_repair.py  test_is_appellate_case.py  test_top_k.py
test/agentic-lib/: test_dynamic_context_builder.py
test/data/legal/nj_case_metadata/: CasesMetadata_nj_eq.json  CasesMetadata_nj_law.json  CasesMetadata_nj_manumission.json  CasesMetadata_nj_misc.json  CasesMetadata_nj_super.json
test/kg/: PHASE1_TEST_QUICK_START.md  TEST_PHASE1_SUMMARY.md  __init__.py  conftest.py  test_base.py  test_kgrag.py  test_layer2.py  test_layer3.py  test_mock_backend.py  test_neo4j_backend.py  test_phase1_domain_examples.py  test_phase1_embed_models.py  test_phase1_embedder.py  test_phase1_models.py  test_phase1_preprocessor.py  test_phase1_qa_models.py  test_phase1_rep.py  test_phase1_requirements.py  test_phase1_updater_models.py
test/kg/utils/: README.md  __init__.py  test_data_utils.py  test_eval_utils.py  test_progress.py  test_session_manager.py
